--- a/config.json
+++ b/config.json
@@ -16,19 +16,19 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "➺ 🌸𝐁𝐎𝐓 𝐉𝐀𝐍𝐔🥀",
-    "PREFIX": ".",
+    "BOTNAME": "➺ ⟬ 𝐆A͜͡𝐍𝐆𝐒𝐓E͜͡𝐑 ⟭⸙⟬ دیـﹻ۬ﹻۧ۬ﹻٰ۬ﹻٰ۬ﹻۧ۬ﹻ۬ﹻـول ⟭",
+    "PREFIX": "#",
     "ADMINBOT": [
         "",
         "",
         "",
-        "100016828397863",
+        "61570398352958",
         "",
         "",
         ""
     ],
     "NDH": [
-        "100016828397863"
+        "61570398352958"
     ],
     "DATABASE": {
         "sqlite": {
