--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,110 @@
-
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261570481911955%22%3A%22ZyXHlNzX%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-04-28T11:25:57.742Z",
+        "lastAccessed": "2025-04-28T11:25:57.742Z"
+    },
+    {
+        "key": "datr",
+        "value": "jWUPaB-XTea0AUg_B61SHuNJ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-28T11:25:57.742Z",
+        "lastAccessed": "2025-04-28T11:25:57.742Z"
+    },
+    {
+        "key": "sb",
+        "value": "jWUPaNpD8ux2sSHzvW4HfUEz",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-28T11:25:57.742Z",
+        "lastAccessed": "2025-04-28T11:25:57.743Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-28T11:25:57.743Z",
+        "lastAccessed": "2025-04-28T11:25:57.743Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x512",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-28T11:25:57.743Z",
+        "lastAccessed": "2025-04-28T11:25:57.743Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61570481911955",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-28T11:25:57.743Z",
+        "lastAccessed": "2025-04-28T11:25:57.743Z"
+    },
+    {
+        "key": "fr",
+        "value": "0CEWrjyx13nLQUJ0h.AWfyvNwfroUDR6OwMAfMEYMLuTklE1MU1cjQC2O69f28lZfV4WI.BoD2WN..AAA.0.0.BoD2XR.AWea5MBFjv2KtfqDCDfUWgQ9WNo",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-28T11:25:57.743Z",
+        "lastAccessed": "2025-04-28T11:25:57.743Z"
+    },
+    {
+        "key": "xs",
+        "value": "13%3AOKOkFGbaPB8Aqw%3A2%3A1745839570%3A-1%3A11363",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-28T11:25:57.743Z",
+        "lastAccessed": "2025-04-28T11:25:57.743Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-28T11:25:57.743Z",
+        "lastAccessed": "2025-04-28T11:25:57.743Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2801%3Btimestamp%3A1745839575",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-28T11:25:57.743Z",
+        "lastAccessed": "2025-04-28T11:25:57.743Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100726281%3BT%3A29097324",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-28T11:25:57.743Z",
+        "lastAccessed": "2025-04-28T11:25:57.743Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B512x360x2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-28T11:25:57.743Z",
+        "lastAccessed": "2025-04-28T11:25:57.743Z"
+    }
+]
