--- a/appstate.json
+++ b/appstate.json
@@ -1,30 +1,48 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261570481911955%22%3A%22ZyXHlNzX%22%7D",
+        "value": "%7B%2261563138265655%22%3A%22xF8Q1yL9%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-04-28T11:25:57.742Z",
-        "lastAccessed": "2025-04-28T11:25:57.742Z"
+        "creation": "2025-04-28T19:43:08.249Z",
+        "lastAccessed": "2025-04-28T19:43:08.249Z"
     },
     {
         "key": "datr",
-        "value": "jWUPaB-XTea0AUg_B61SHuNJ",
+        "value": "LNoPaGMo-xy54LApuq-R0sTe",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T11:25:57.742Z",
-        "lastAccessed": "2025-04-28T11:25:57.742Z"
+        "creation": "2025-04-28T19:43:08.249Z",
+        "lastAccessed": "2025-04-28T19:43:08.249Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-28T19:43:08.249Z",
+        "lastAccessed": "2025-04-28T19:43:08.249Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-28T19:43:08.249Z",
+        "lastAccessed": "2025-04-28T19:43:08.249Z"
     },
     {
         "key": "sb",
-        "value": "jWUPaNpD8ux2sSHzvW4HfUEz",
+        "value": "LNoPaC7vJBNFhXplwrKHEwRS",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T11:25:57.742Z",
-        "lastAccessed": "2025-04-28T11:25:57.743Z"
+        "creation": "2025-04-28T19:43:08.249Z",
+        "lastAccessed": "2025-04-28T19:43:08.249Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -32,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T11:25:57.743Z",
-        "lastAccessed": "2025-04-28T11:25:57.743Z"
+        "creation": "2025-04-28T19:43:08.250Z",
+        "lastAccessed": "2025-04-28T19:43:08.250Z"
     },
     {
         "key": "wd",
@@ -41,62 +59,62 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T11:25:57.743Z",
-        "lastAccessed": "2025-04-28T11:25:57.743Z"
+        "creation": "2025-04-28T19:43:08.250Z",
+        "lastAccessed": "2025-04-28T19:43:08.250Z"
     },
     {
         "key": "c_user",
-        "value": "61570481911955",
+        "value": "61563138265655",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T11:25:57.743Z",
-        "lastAccessed": "2025-04-28T11:25:57.743Z"
+        "creation": "2025-04-28T19:43:08.250Z",
+        "lastAccessed": "2025-04-28T19:43:08.250Z"
     },
     {
         "key": "fr",
-        "value": "0CEWrjyx13nLQUJ0h.AWfyvNwfroUDR6OwMAfMEYMLuTklE1MU1cjQC2O69f28lZfV4WI.BoD2WN..AAA.0.0.BoD2XR.AWea5MBFjv2KtfqDCDfUWgQ9WNo",
+        "value": "074ldxohZ3OujTOJv.AWcpuw9WHrpkpiYCbMXqDRDk42tKrXf-Hi6w5vLicZJbDJ46rSY.BoD9os..AAA.0.0.BoD9pB.AWeiW6-gdHSR7lAs9_cdaUebXR4",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T11:25:57.743Z",
-        "lastAccessed": "2025-04-28T11:25:57.743Z"
+        "creation": "2025-04-28T19:43:08.250Z",
+        "lastAccessed": "2025-04-28T19:43:08.250Z"
     },
     {
         "key": "xs",
-        "value": "13%3AOKOkFGbaPB8Aqw%3A2%3A1745839570%3A-1%3A11363",
+        "value": "39%3ADKrR1RtnprEYDA%3A2%3A1745869378%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T11:25:57.743Z",
-        "lastAccessed": "2025-04-28T11:25:57.743Z"
+        "creation": "2025-04-28T19:43:08.250Z",
+        "lastAccessed": "2025-04-28T19:43:08.250Z"
     },
     {
         "key": "locale",
-        "value": "en_US",
+        "value": "en_GB",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T11:25:57.743Z",
-        "lastAccessed": "2025-04-28T11:25:57.743Z"
+        "creation": "2025-04-28T19:43:08.250Z",
+        "lastAccessed": "2025-04-28T19:43:08.250Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2801%3Btimestamp%3A1745839575",
+        "value": "v2%3Bclient_version%3A2802%3Btimestamp%3A1745869386",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T11:25:57.743Z",
-        "lastAccessed": "2025-04-28T11:25:57.743Z"
+        "creation": "2025-04-28T19:43:08.250Z",
+        "lastAccessed": "2025-04-28T19:43:08.250Z"
     },
     {
         "key": "fbl_st",
-        "value": "100726281%3BT%3A29097324",
+        "value": "100730708%3BT%3A29097822",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T11:25:57.743Z",
-        "lastAccessed": "2025-04-28T11:25:57.743Z"
+        "creation": "2025-04-28T19:43:08.250Z",
+        "lastAccessed": "2025-04-28T19:43:08.250Z"
     },
     {
         "key": "vpd",
@@ -104,7 +122,7 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T11:25:57.743Z",
-        "lastAccessed": "2025-04-28T11:25:57.743Z"
+        "creation": "2025-04-28T19:43:08.250Z",
+        "lastAccessed": "2025-04-28T19:43:08.250Z"
     }
 ]
