--- a/appstate.json
+++ b/appstate.json
@@ -1,48 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261563138265655%22%3A%22xF8Q1yL9%22%7D",
+        "value": "%7B%2261563138265655%22%3A%22UjLm5cfL%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.249Z",
-        "lastAccessed": "2025-04-28T19:43:08.249Z"
+        "creation": "2025-05-05T09:39:26.479Z",
+        "lastAccessed": "2025-05-05T09:39:26.479Z"
     },
     {
         "key": "datr",
-        "value": "LNoPaGMo-xy54LApuq-R0sTe",
+        "value": "l4gYaDrF3WMpP1YpawYyDLVP",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.249Z",
-        "lastAccessed": "2025-04-28T19:43:08.249Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.249Z",
-        "lastAccessed": "2025-04-28T19:43:08.249Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.249Z",
-        "lastAccessed": "2025-04-28T19:43:08.249Z"
+        "creation": "2025-05-05T09:39:26.479Z",
+        "lastAccessed": "2025-05-05T09:39:26.479Z"
     },
     {
         "key": "sb",
-        "value": "LNoPaC7vJBNFhXplwrKHEwRS",
+        "value": "l4gYaH_FKLBG36yaRkT1WqDC",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.249Z",
-        "lastAccessed": "2025-04-28T19:43:08.249Z"
+        "creation": "2025-05-05T09:39:26.479Z",
+        "lastAccessed": "2025-05-05T09:39:26.479Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -50,17 +32,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.250Z",
-        "lastAccessed": "2025-04-28T19:43:08.250Z"
+        "creation": "2025-05-05T09:39:26.479Z",
+        "lastAccessed": "2025-05-05T09:39:26.479Z"
     },
     {
         "key": "wd",
-        "value": "360x512",
+        "value": "360x640",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.250Z",
-        "lastAccessed": "2025-04-28T19:43:08.250Z"
+        "creation": "2025-05-05T09:39:26.479Z",
+        "lastAccessed": "2025-05-05T09:39:26.479Z"
     },
     {
         "key": "c_user",
@@ -68,26 +50,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.250Z",
-        "lastAccessed": "2025-04-28T19:43:08.250Z"
+        "creation": "2025-05-05T09:39:26.479Z",
+        "lastAccessed": "2025-05-05T09:39:26.479Z"
     },
     {
         "key": "fr",
-        "value": "074ldxohZ3OujTOJv.AWcpuw9WHrpkpiYCbMXqDRDk42tKrXf-Hi6w5vLicZJbDJ46rSY.BoD9os..AAA.0.0.BoD9pB.AWeiW6-gdHSR7lAs9_cdaUebXR4",
+        "value": "0KbaNU3WrKAhGHNZG.AWdrWmlo-_wJyNUiaYDb5casLaK8ooGQ5p5tX7TeP1Xxe3kDQ4Y.BoGIiX..AAA.0.0.BoGImw.AWdx16E7FJvmsfMGgPDDyA4hx-U",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.250Z",
-        "lastAccessed": "2025-04-28T19:43:08.250Z"
+        "creation": "2025-05-05T09:39:26.479Z",
+        "lastAccessed": "2025-05-05T09:39:26.479Z"
     },
     {
         "key": "xs",
-        "value": "39%3ADKrR1RtnprEYDA%3A2%3A1745869378%3A-1%3A5903",
+        "value": "5%3A2oa1_Z9WbCePdA%3A2%3A1746438583%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.250Z",
-        "lastAccessed": "2025-04-28T19:43:08.250Z"
+        "creation": "2025-05-05T09:39:26.479Z",
+        "lastAccessed": "2025-05-05T09:39:26.479Z"
     },
     {
         "key": "locale",
@@ -95,26 +77,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.250Z",
-        "lastAccessed": "2025-04-28T19:43:08.250Z"
+        "creation": "2025-05-05T09:39:26.479Z",
+        "lastAccessed": "2025-05-05T09:39:26.479Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2802%3Btimestamp%3A1745869386",
+        "value": "v2%3Bclient_version%3A2805%3Btimestamp%3A1746438590",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.250Z",
-        "lastAccessed": "2025-04-28T19:43:08.250Z"
+        "creation": "2025-05-05T09:39:26.479Z",
+        "lastAccessed": "2025-05-05T09:39:26.479Z"
     },
     {
         "key": "fbl_st",
-        "value": "100730708%3BT%3A29097822",
+        "value": "100738069%3BT%3A29107297",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.250Z",
-        "lastAccessed": "2025-04-28T19:43:08.250Z"
+        "creation": "2025-05-05T09:39:26.479Z",
+        "lastAccessed": "2025-05-05T09:39:26.479Z"
     },
     {
         "key": "vpd",
@@ -122,7 +104,7 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-28T19:43:08.250Z",
-        "lastAccessed": "2025-04-28T19:43:08.250Z"
+        "creation": "2025-05-05T09:39:26.479Z",
+        "lastAccessed": "2025-05-05T09:39:26.479Z"
     }
 ]
